TAG: qcreports_db-tr6519-BP
DATE: 01/24/2013
STAFF: sc
CHANGES: branch point tag for N2MO project

TAG: qcreports_db-5-1-2-3
TAG: qcreports_db-5-1-2-2
TAG: qcreports_db-5-1-2-1
DATE: 01/07/2013, 01/09/2013, 01/14/2013
STAFF: lec
CHANGES:
mgd/PRB_StrainByDate.sql: add 'mberry'/01/15/2013 to exclusion list
mgd/PRB_StrainByDate.sql: add 'mberry'/01/04/2013 to exclusion list
added missing GXD_FullCode.py reports to qcr.html

TAG: qcreports_db-5-1-1-2
DATE: 01/02/2013
STAFF: lec
CHANGES:
TR11185/monthly/PRB_References.sql
TR11206/weekly/GXD_FullCode.py
TR11254/mgd/GXD_GenotypeRef.sql
--TR11169/GXD_ImageJPG.sql/this change was only made in the TR directory

TAG: qcreports_db-5-1-1-1
DATE: 12/11/2012
STAFF: dbm
CHANGES:
MRK_GeneNoMcvAnnot.py: fixed bug in printing row count of results set

TAG: qcreports_db-5-1-0-6
DATE: 11/16/2012
STAFF: lec
CHANGES:
TR11218/MRK_GOUnknown.sql

TAG: qcreports_db-5-1-0-5
DATE: 11/14/2012
STAFF: lec
CHANGES:
TR11201/GXD_References.sql/move from monthly to weekly

TAG: qcreports_db-5-1-0-4
DATE: 11/13/2012
STAFF: lec
CHANGES:
mgd/GXD_ImageCheck.sql;update print statement

TAG: qcreports_db-5-1-0-3
DATE: 10/04/2012
STAFF: lec
CHANGES:
ALL_CellLineProvdideer.sql/bug fix

TAG: qcreports_db-5-1-0-2
DATE: 09/25/2012
STAFF: lec
CHANGES:
TR1184/PRB_StrainByDate.py

TAG: qcreports_db-5-1-0-1
DATE: 09/17/2012
STAFF: lec
CHANGES:
TR11173/changed J:171498/"J Am Soc Nephrol" to "GUDMAP"

TAG: qcreports_db-5-0-0-23
DATE: 8/14/2012
STAFF: sc
CHANGES: TR11143/ missing > at end of item 15 in alleles section

TAG: qcreports_db-5-0-0-22
TAG: qcreports_db-5-0-0-21
DATE: 08/07/2012
STAFF: lec
CHANGES: 
1) TR11107/GXD_FullCodeableIndexed.py; added

TAG: qcreports_db-5-0-0-20
DATE: 08/01/2012
STAFF: lec
CHANGES: 
1) TR11117/GXD_ImagePanes.py; updated the name

TAG: qcreports_db-5-0-0-19
DATE: 07/12/2012
STAFF: lec
CHANGES: 
1) TR11120/GO_done_newlit.py; remove

TAG: qcreports_db-5-0-0-18
TAG: qcreports_db-5-0-0-17
DATE: 07/10/2012
STAFF: lec
CHANGES: 