@@ -1,3 +1,10 @@
+TAG: qcreports_db-tr6519-1
+DATE: 01/25/2013
+STAFF: sc
+CHANGES:
+1) added three new homology reports MRK_Homology_Class*.py
+2) qcr.html - added new homology section and three new reports
+
 TAG: qcreports_db-tr6519-BP
 DATE: 01/24/2013
 STAFF: sc
